- Added "Animation Speed", Particles Color", "Light Color", "Wiggle", "Loop Sound", "Loop Burst", "Static Time", "Poem", "Poem Name", "Poem Color", "Poem Particles Color", "Poem Sprite", "Poem Sprite Animation Speed" and "Poem Sprite Animation Pause" attributes to Custom Collectable
- Added "Hide On World Map" attribute to In-game Map Hint Controllers
- Moved the "Show Hints" and "Progress Display" options from the bottom of the In-Game map screen to a new menu accessible with a single button while the In-Game map is open
- Added a Marker feature to the In-game map, allowing players to place markers on the map, at the location of their choice
- The progress display setting of the In-Game map is now shared between the area map and the world map, instead of having differents display settings for each one
- Break Blocks Indicators now also apear if the player touch them in the Dash Attacking state. This make it more lenient to reveal the indicator in cases where the player dash end just before the block
- Golden strawberries in campaigns using a Merge Chapter Controller now reset the current timer to 0 when grabbed, and restore it back (+ the time spent with the berry) on death or berry collection
- Golden strawberries in campaigns using a Merge Chapter Controller now reset entities that should not reload anymore when grabbed, and resture them back (+ any new entity that got added with the berry) on death or berry collection
- Achievements popups in Secret of Celeste Mountain can no longer appear while the player is in dummy state or for the first 0.1s after entering a room, to prevent them appearing while the player is teleported
- Arrows on the warp menu disapear correctly when there is more than 10 warps in the menu and the player select the "Stay Here" option
- If the player die after using the Remote drone but before the drone can be controlled, the player will now respawn at their current spawn point to prevent an infinite respawn softlock