@@ -46,6 +46,8 @@ namespace Celeste.Mod.XaphanHelper.Entities
 
         public bool CanSlide;
 
+        public bool ForceSlide;
+
         public bool UpsideDown;
 
         public bool NoRender;
@@ -80,7 +82,7 @@ namespace Celeste.Mod.XaphanHelper.Entities
 
         private string RenderMethod;
 
-        public Slope(Vector2 position, Vector2 offset, bool gentle, string side, int soundIndex, int slopeHeight, string tilesTop, string tilesBottom, string texture, string flagTexture, bool canSlide, string directory, string flagDirectory, bool upsideDown, bool noRender, bool stickyDash, bool rainbow, bool canJumpThrough, string flag, bool affectPlayerSpeed, string renderMethod = "Type A", bool visualOnly = false) : base(position + offset, 0, 0, true)
+        public Slope(Vector2 position, Vector2 offset, bool gentle, string side, int soundIndex, int slopeHeight, string tilesTop, string tilesBottom, string texture, string flagTexture, bool canSlide, bool forceSlide, string directory, string flagDirectory, bool upsideDown, bool noRender, bool stickyDash, bool rainbow, bool canJumpThrough, string flag, bool affectPlayerSpeed, string renderMethod = "Type A", bool visualOnly = false) : base(position + offset, 0, 0, true)
         {
 
             Tag = Tags.TransitionUpdate;
@@ -95,6 +97,7 @@ namespace Celeste.Mod.XaphanHelper.Entities
             Texture = texture;
             FlagTexture = flagTexture;
             CanSlide = canSlide;
+            ForceSlide = forceSlide;
             Directory = directory;
             FlagDirectory = flagDirectory;
             UpsideDown = upsideDown;
@@ -255,7 +258,7 @@ namespace Celeste.Mod.XaphanHelper.Entities
         }
 
         public Slope(EntityData data, Vector2 offset) : this(data.Position, offset, data.Bool("gentle"), data.Attr("side"), data.Int("soundIndex"), data.Int("slopeHeight", 1), data.Attr("tilesTop"), data.Attr("tilesBottom"),
-            data.Attr("texture", "cement"), data.Attr("flagTexture", ""), data.Bool("canSlide", false), data.Attr("customDirectory", ""), data.Attr("flagCustomDirectory", ""), data.Bool("upsideDown", false), data.Bool("noRender", false), data.Bool("stickyDash", false), data.Bool("rainbow", false),
+            data.Attr("texture", "cement"), data.Attr("flagTexture", ""), data.Bool("canSlide", false), data.Bool("forceSlide", false), data.Attr("customDirectory", ""), data.Attr("flagCustomDirectory", ""), data.Bool("upsideDown", false), data.Bool("noRender", false), data.Bool("stickyDash", false), data.Bool("rainbow", false),
             data.Bool("canJumpThrough", false), data.Attr("flag", ""), data.Bool("affectPlayerSpeed", false), data.Attr("renderMethod", "Type A"))
         {
 
@@ -759,7 +762,7 @@ namespace Celeste.Mod.XaphanHelper.Entities
             }
             if (!VisualOnly)
             {
-                SceneAs<Level>().Add(new PlayerPlatform(Position + new Vector2(Side == "Right" ? ((Gentle ? -(SlopeHeight - 1) * 16 : -(SlopeHeight - 1) * 8) + 8) * (UpsideDown ? -1 : 1) : 0 + 0, (8 * (SlopeHeight - 1) + 4)) * (UpsideDown ? -1 : 1), Gentle ? 8 + 16 * SlopeHeight : 8 + 8 * SlopeHeight, Gentle, Side, SoundIndex, SlopeHeight, CanSlide, Top, AffectPlayerSpeed, UpsideDown, StickyDash, CanJumpThrough));
+                SceneAs<Level>().Add(new PlayerPlatform(Position + new Vector2(Side == "Right" ? ((Gentle ? -(SlopeHeight - 1) * 16 : -(SlopeHeight - 1) * 8) + 8) * (UpsideDown ? -1 : 1) : 0 + 0, (8 * (SlopeHeight - 1) + 4)) * (UpsideDown ? -1 : 1), Gentle ? 8 + 16 * SlopeHeight : 8 + 8 * SlopeHeight, Gentle, Side, SoundIndex, SlopeHeight, CanSlide, ForceSlide, Top, AffectPlayerSpeed, UpsideDown, StickyDash, CanJumpThrough));
                 if (!UpsideDown)
                 {
                     SceneAs<Level>().Add(new FakePlayerPlatform(Position + new Vector2(Side == "Right" ? ((Gentle ? -(SlopeHeight - 1) * 16 : -(SlopeHeight - 1) * 8) + 8) * (UpsideDown ? -1 : 1) : 0 + 0, (8 * (SlopeHeight - 1) + 4)) * (UpsideDown ? -1 : 1), Gentle ? 8 + 16 * SlopeHeight : 8 + 8 * SlopeHeight, Gentle, Side, SoundIndex, SlopeHeight, Top, UpsideDown, StickyDash, CanJumpThrough));
