@@ -54,7 +54,7 @@ local Slope = {}
 Slope.name = "XaphanHelper/Slope"
 Slope.depth = -10001
 Slope.fieldOrder = {
-    "x", "y", "side", "flag", "customDirectory", "flagCustomDirectory", "texture", "flagTexture", "soundIndex", "slopeHeight", "tilesTop", "tilesBottom", "renderMethod", "gentle", "upsideDown", "canJumpThrough", "canSlide", "affectPlayerSpeed", "stickyDash", "noRender", "rainbow"
+    "x", "y", "side", "flag", "customDirectory", "flagCustomDirectory", "texture", "flagTexture", "soundIndex", "slopeHeight", "tilesTop", "tilesBottom", "renderMethod", "gentle", "upsideDown", "canJumpThrough", "canSlide", "forceSlide", "affectPlayerSpeed", "stickyDash", "noRender", "rainbow"
 }
 Slope.fieldInformation = {
     side = {
@@ -102,6 +102,7 @@ Slope.placements = {
         flagTexture = "cement",
         flag = "",
         canSlide = false,
+        forceSlide = false,
         upsideDown = false,
         noRender = false,
         stickyDash  = false,
