@@ -4,6 +4,7 @@ Version 1.0.64 :
 - Added "Group", "Can Drown", "Air Timer", "Inside Transparency" and "Appear Flags" attributes to Liquids
 - Added "Animation Speed", Particles Color", "Light Color", "Wiggle", "Loop Sound", "Loop Burst", "Static Time", "Poem", "Poem Name", "Poem Color", "Poem Particles Color", "Poem Sprite", "Poem Sprite Animation Speed" and "Poem Sprite Animation Pause" attributes to Custom Collectable
 - Added "Hide On World Map" attribute to In-game Map Hint Controllers
+- Added "Force Slide" attribute to Slopes
 - Moved the "Show Hints" and "Progress Display" options from the bottom of the In-Game map screen to a new menu accessible with a single button while the In-Game map is open
 - Added a Marker feature to the In-game map, allowing players to place markers on the map, at the location of their choice
 - The progress display setting of the In-Game map is now shared between the area map and the world map, instead of having differents display settings for each one
